# football_data_puller

./: .editorconfig  .gitignore  LICENSE  README.md  app.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: add-new-feature.md  fix-bug.md
.github/workflows/: ci.yml  tagged-release.yml
docs/: CONTRIBUTION.md
requirements/: dev.txt  essential.txt  test.txt
tests/: conftest.py
tests/dependencies/: test_dependencies.py
